--- a/src/app/pages/invoice-lodging/invoice-lodging.component.html
+++ b/src/app/pages/invoice-lodging/invoice-lodging.component.html
@@ -31,8 +31,8 @@
           [label]="'Tipo de documento'"
           [control]="getControl('documentType')"
           [options]="formattedDocumentTypes"
-          [optionName]="'name'"
-          [optionValue]="'id'"
+          [optionName]="'optionName'"
+          [optionValue]="'optionValue'"
           class="col-12"
         ></app-select-input>
         <app-text-input
