--- a/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
+++ b/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
@@ -1,5 +1,13 @@
 @if (currentStep === 1) {
-  <app-inf-step-one [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep"></app-inf-step-one>
+  <app-inf-step-one 
+    [invoiceNaturalForm]="invoiceNaturalForm" 
+    [vendorInfo]="vendorInfo"
+    (formSubmit)="sendForm()" 
+    (previousStep)="previousStep()"
+    [selectOptionsPo]="formattedOcOptions">
+  </app-inf-step-one>
 } @else if (currentStep === 2) {
   <app-inf-step-two [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()"></app-inf-step-two>
+} @else if (currentStep == 3) {
+  <app-inf-step-three [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()"></app-inf-step-three>
 }
