--- a/src/app/pages/oc-forms-cmo/oc-forms-cmo.component.html
+++ b/src/app/pages/oc-forms-cmo/oc-forms-cmo.component.html
@@ -2,13 +2,21 @@
   <div class="loader">
       <div class="custom-loader"></div>
   </div>
-} @else {
+} @else if (personType === PERSON_TYPES.Natural){
 <app-panel-buttons (saveForm)="saveForm()" [isOc]="true"></app-panel-buttons>
 <div class="form-container">
   <app-logo></app-logo>
   <h1 class="form-title">CONFIRMACIÓN DE RADICACIÓN</h1>
   <h3 class="form-subtitle"> PASO {{currentStep}}/3</h3>
   <p>Para continuar con el proceso de radicación, por favor complete el siguiente formulario</p>
-  <app-invoice-natural-form [vendorInfo]="vendorInfo" [currentStep]="currentStep" (handleStepChange)="handleStepChange($event)"></app-invoice-natural-form>
+  <app-invoice-natural-form [vendorInfo]="vendorInfo" [currentStep]="currentStep" (handleStepChange)="handleStepChange($event)" [purchaseOrders]="purchaseOrders" [selectedPurchaseOrders]="selectedPurchaseOrders"></app-invoice-natural-form>
 </div>
+} @else if (personType === PERSON_TYPES.Juridica){
+  <div class="form-container">
+    <app-logo></app-logo>
+    <h1 class="form-title">CONFIRMACIÓN DE RADICACIÓN</h1>
+    <h3 class="form-subtitle"> PASO {{currentStep}}/1</h3>
+    <p>Para continuar con el proceso de radicación, por favor complete el siguiente formulario</p>
+    <app-invoice-juridica-form [vendorInfo]="vendorInfo"></app-invoice-juridica-form>
+  </div>
 }
