--- a/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
+++ b/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
@@ -4,6 +4,7 @@
     [vendorInfo]="vendorInfo"
     (formSubmit)="sendForm()" 
     (previousStep)="previousStep()"
+    [poProjections]="poProjections"
     [selectOptionsPo]="formattedOcOptions">
   </app-inf-step-one>
 } @else if (currentStep === 2) {
