refactor: Update oc-forms-cmo component with dynamic step rendering and previous step functionality

--- a/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.css
+++ b/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.css
@@ -1,3 +1,12 @@
 .padding-bottom {
   padding-bottom: 100px;
 }
+
+.red {
+  color: red;
+  margin-left: -12px;
+}
+
+.margin-bottom {
+  margin-bottom: 12px !important;
+}
