refactor: Update oc-forms-cmo component with dynamic step rendering, previous step functionallity and second step validation

--- a/src/app/components/atoms/checkbox-input/checkbox-input.component.html
+++ b/src/app/components/atoms/checkbox-input/checkbox-input.component.html
@@ -7,7 +7,7 @@
     <label class="checkbox-label">
       <input
         name="{{ controlName }}"
-        (ngModelChange)="setDescriptionControl($event, controlName)"
+        (ngModelChange)="setDescriptionControl($event, controlName); setFileControl($event, controlName)"
         [formControl]="control"
         type="radio"
         [value]="'1'"> {{customCheckboxLabel.true}}
