--- a/src/app/components/molecules/inf-step-three/inf-step-three.component.html
+++ b/src/app/components/molecules/inf-step-three/inf-step-three.component.html
@@ -18,4 +18,7 @@
     <app-filebox [control]="anexo"></app-filebox>
   }
   <a (click)="addNewAnexFormGroup()">+ Agregar anexo</a>
+  <div class="row margin-top padding-bottom padding-bottom">
+    <button class="col-12 btn-purpple margin-top" type="submit">Finalizar</button>
+  </div>
 </form>
