--- a/src/app/components/molecules/inf-step-three/inf-step-three.component.css
+++ b/src/app/components/molecules/inf-step-three/inf-step-three.component.css
@@ -1,3 +1,21 @@
 .padding-bottom {
   padding-bottom: 100px;
 }
+
+.green-anchor {
+  color: var(--dark-success-color) !important;
+
+  &:hover {
+    color: var(--success-color) !important;
+  }
+}
+
+a {
+  margin-left: 6px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+p {
+  margin-bottom: 0px;
+}
