--- a/src/app/components/molecules/inf-step-three/inf-step-three.component.html
+++ b/src/app/components/molecules/inf-step-three/inf-step-three.component.html
@@ -6,16 +6,16 @@
   <br><p><b>{{oc.consecutive_codes}}</b>  <a>Ver aquí</a></p>
   }
   <br><b>RUT</b><a>Ver aquí</a>
-  <br><p>Desea actualizar el documento?  <a>click aquí</a></p>
+  <br><p>Desea actualizar el documento?  <a class="green-anchor">click aquí</a></p>
   <br><b>Anexo 1. Certificación de dependiente #1</b>
-  <br><p>Desea actualizar el documento? <a>click aquí</a></p>
+  <br><p>Desea actualizar el documento? <a class="green-anchor">click aquí</a></p>
   <app-subtitle [subtitle]="'Documentos solicitados'"></app-subtitle>
 
   <label>Seguridad Social*</label>
   <app-filebox [control]="getControl('socialSecurity')"></app-filebox>
   @for(anexo of getOtherAnexesControls(); track $index) {
     <label>Anexo {{$index}}*</label>
-    <app-filebox [control]="anexo"></app-filebox>
+    <app-filebox [control]="anexo" [id]="'otherAnexes-' + $index"></app-filebox>
   }
   <a (click)="addNewAnexFormGroup()">+ Agregar anexo</a>
   <div class="row margin-top padding-bottom padding-bottom">
