--- a/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
+++ b/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
@@ -1,14 +1,20 @@
-@if (currentStep === 1) {
-  <app-inf-step-one 
-    [invoiceNaturalForm]="invoiceNaturalForm" 
-    [vendorInfo]="vendorInfo"
-    (formSubmit)="sendForm()" 
-    (previousStep)="previousStep()"
-    [poProjections]="poProjections"
-    [selectOptionsPo]="formattedOcOptions">
-  </app-inf-step-one>
-} @else if (currentStep === 2) {
-  <app-inf-step-two [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()" [validateStep]="validateStepTwo"></app-inf-step-two>
-} @else if (currentStep == 3) {
-  <app-inf-step-three [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()"></app-inf-step-three>
+@if(loading) {
+  <div class="loader">
+      <div class="custom-loader"></div>
+  </div>
+} @else {
+  @if (currentStep === 1) {
+    <app-inf-step-one 
+      [invoiceNaturalForm]="invoiceNaturalForm" 
+      [vendorInfo]="vendorInfo"
+      (formSubmit)="sendForm()" 
+      (previousStep)="previousStep()"
+      [poProjections]="poProjections"
+      [selectOptionsPo]="formattedOcOptions">
+    </app-inf-step-one>
+  } @else if (currentStep === 2) {
+    <app-inf-step-two [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()" [validateStep]="validateStepTwo"></app-inf-step-two>
+  } @else if (currentStep == 3) {
+    <app-inf-step-three [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()"></app-inf-step-three>
+  }
 }
