refactor: Update oc-forms-cmo component with dynamic step rendering, previous step functionality, and second step validation

--- a/src/app/components/molecules/inf-dependant-certification/inf-dependant-certification.component.html
+++ b/src/app/components/molecules/inf-dependant-certification/inf-dependant-certification.component.html
@@ -5,7 +5,9 @@
     <app-select-input
       [label]="'Tipo de documento'"
       [control]="getControl('dependantDocumentTypeId')"
-      [options]="[]"
+      [options]="documentTypesOptions"
+      [optionName]="'documentTypeEsp'"
+      [optionValue]="'id'"
       class="col-6"
       [id]="'dependantDocumentTypeId-' + dependentIndex"
     ></app-select-input>
