refactor: Update oc-forms-cmo component with dynamic step rendering, previous step functionality, and second step validation

--- a/src/app/components/molecules/inf-step-two/inf-step-two.component.css
+++ b/src/app/components/molecules/inf-step-two/inf-step-two.component.css
@@ -43,3 +43,11 @@ label {
 .padding-bottom {
   padding-bottom: 100px;
 }
+
+.add-dependent-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 20px;
+  color: red;
+}
