--- a/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
+++ b/src/app/components/organisms/invoice-natural-form/invoice-natural-form.component.html
@@ -13,7 +13,7 @@
       [selectOptionsPo]="formattedOcOptions">
     </app-inf-step-one>
   } @else if (currentStep === 2) {
-    <app-inf-step-two [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()" [validateStep]="validateStepTwo"></app-inf-step-two>
+    <app-inf-step-two [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()" [validateStep]="validateStepTwo" [loading]="loading"></app-inf-step-two>
   } @else if (currentStep == 3) {
     <app-inf-step-three [invoiceNaturalForm]="invoiceNaturalForm" [vendorInfo]="vendorInfo" (formSubmit)="sendForm()" (previousStep)="previousStep()"></app-inf-step-three>
   }
