refactor: Update invoice-juridica-form component with green anchor color and margin adjustments

--- a/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.css
+++ b/src/app/components/organisms/invoice-juridica-form/invoice-juridica-form.component.css
@@ -10,3 +10,22 @@
 .margin-bottom {
   margin-bottom: 12px !important;
 }
+
+.green-anchor {
+  color: var(--dark-success-color) !important;
+
+  &:hover {
+    color: var(--success-color) !important;
+  }
+}
+
+a {
+  margin-left: 6px;
+  text-decoration: none;
+  text-transform: capitalize;
+  text-wrap: nowrap;
+}
+
+p {
+  margin: 0 !important
+}
