--- a/src/app/components/atoms/select-input/select-input.component.html
+++ b/src/app/components/atoms/select-input/select-input.component.html
@@ -7,7 +7,7 @@
       }}
     </small>
   } 
-  @if(!getErrors()){
+  @if(!getErrors() && description){
     <small class="description">
       {{ description }}
     </small>
