--- a/src/app/components/molecules/inf-step-three/inf-step-three.component.html
+++ b/src/app/components/molecules/inf-step-three/inf-step-three.component.html
@@ -20,6 +20,6 @@
   <a (click)="addNewAnexFormGroup()">+ Agregar anexo</a>
   <div class="row margin-top padding-bottom padding-bottom">
     <button mat-raised-button type="button" class="col-6 btn-gray" (click)="handlePreviousStep()">REGRESAR</button>
-    <button class="col-6 btn-purpple margin-top" type="submit">Finalizar</button>
+    <button class="col-6 btn-purpple" type="submit">Finalizar</button>
   </div>
 </form>
