--- a/src/app/components/atoms/filebox/filebox.component.html
+++ b/src/app/components/atoms/filebox/filebox.component.html
@@ -10,7 +10,7 @@
       (onChangeFile)="onDragFileChange($event)"
       >
     <div class="label-content">
-      <img src="/assets/images/Upload.svg" alt="upload" class="upload">
+      <img src="./assets/images/Upload.svg" alt="upload" class="upload">
       <p>Arrastre y suelte el archivo aquí o <a>Haga clic para examinar los archivos</a></p>
     </div>
     <input
