--- a/src/app/components/molecules/inf-dependant-certification/inf-dependant-certification.component.html
+++ b/src/app/components/molecules/inf-dependant-certification/inf-dependant-certification.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="dependantForm" [id]="'dependentForm-' + dependentIndex">
+<form [formGroup]="dependantForm" [id]="dependentIndex">
   <app-subtitle [subtitle]="'ANEXO 1. CERTIFICACIÓN DE DEPENDIENTE #' + dependentIndex"></app-subtitle>
   <p>Bajo la gravedad del juramento, y en cumplimiento de lo previsto en el Artículo 387 del Estatuto Tributario, informo que la(s) persona(s) relacionadas a continuación tiene(n) la calidad de dependiente a mi cargo:</p>
   <div class="row">
@@ -52,7 +52,8 @@
     [boldLabel]="false"
     [control]="getControl('minorChildren')"
     [controlName]="'minorChildren'"
-    [id]="'minorChildren-' + dependentIndex"
+    [customName]="'minorChildren-' + dependentIndex"
+    [id]="'minorChildren'"
   ></app-checkbox-input>
   @if(getValue('minorChildren') === '1') {
     <app-filebox
@@ -65,6 +66,7 @@
     [boldLabel]="false"
     [control]="getControl('childrenStudyCertificate')"
     [controlName]="'childrenStudyCertificate'"
+    [customName]="'childrenStudyCertificate-' + dependentIndex"
     [id]="'childrenStudyCertificate-' + dependentIndex"
   ></app-checkbox-input>
   @if(getValue('childrenStudyCertificate') === '1') {
@@ -78,6 +80,7 @@
     [boldLabel]="false"
     [control]="getControl('childrenMedicineCertificate')"
     [controlName]="'childrenMedicineCertificate'"
+    [customName]="'childrenMedicineCertificate-' + dependentIndex"
     [id]="'childrenMedicineCertificate-' + dependentIndex"
   ></app-checkbox-input>
   @if(getValue('childrenMedicineCertificate') === '1') {
@@ -91,6 +94,7 @@
     [boldLabel]="false"
     [control]="getControl('partnerMedicineCertificate')"
     [controlName]="'partnerMedicineCertificate'"
+    [customName]="'partnerMedicineCertificate-' + dependentIndex"
     [id]="'partnerMedicineCertificate-' + dependentIndex"
   ></app-checkbox-input>
   @if(getValue('partnerMedicineCertificate') === '1') {
@@ -104,6 +108,7 @@
     [boldLabel]="false"
     [control]="getControl('familyMedicineCertificate')"
     [controlName]="'familyMedicineCertificate'"
+    [customName]="'familyMedicineCertificate-' + dependentIndex"
     [id]="'familyMedicineCertificate-' + dependentIndex"
   ></app-checkbox-input>
   @if(getValue('familyMedicineCertificate') === '1') {
